samples/_failures_safe/1761555578_d407f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6dc7e9d0.c: In function ‘main’:
./samples/SAFE/__tmp_6dc7e9d0.c:173:9: error: expected declaration or statement at end of input
  173 |         print_token(&tokens[i]);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_6dc7e9d0.c:173:9: error: expected declaration or statement at end of input
